--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -3,6 +3,12 @@
 \usepackage{graphtheory}
 \usepackage{url}
 \pagestyle{plain}
+\newcommand{\sR}{\mathscr{R}}
+\newcommand{\coloring}[1]{\(#1\)-coloring}
+\newcommand{\colorable}[1]{\(#1\)-colorable}
+\newcommand{\chromatic}[1]{\(#1\)-chromatic}
+\newcommand{\X}{\chi}
+\newtheorem{proposition}{Proposition}
 \begin{document}
 
 \title{Two Graph Vertex Partitioning Algorithms for Part Consolidation in Axiomatic Design}
