--- a/299/ref.bib
+++ b/299/ref.bib
@@ -34,15 +34,6 @@
   year = 	 {1972}
 }
 
-@Book{smyth,
-  author={Smyth, C.},
-  title={Functional Design for 3D Printing},
-  edition={Third Revised},
-  publisher={},
-  address={},
-  year={2017}
-}
-
 @Article{sogol,
   author =       {Behdad, S. and Gopalakrishnan, P.K. and Jahanbekam, S. and Kain, H.},
   title =        {Graph Partitioning Technique to Identify Physically Integrated Design Concepts},
@@ -51,7 +42,17 @@
   volume =       {},
   year =         {2018},
   number =       {DETC2018-85646},
-  pages =        {1--13}
+}
+
+@Article{cavallaro,
+  author =       {Behdad, S. and Gopalakrishnan, P.K. and Jahanbekam, S. and Cavallaro, J.},
+  title =        {A Graph Coloring Technique for Identifying the Minimum Number of Parts for Physical Integration in
+  Product Design},
+  journal =      {Proceedings of the ASME 2019 International Design Engineering Technical Conferences \& Computers and
+  Information in Engineering Conference},
+  volume =       {},
+  year =         {2019},
+  number =       {DETC2018-98251},
 }
 
 @Article{beigel,
